[package]
name = "particlebevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0"
bevy_dev_tools = "0.16.0"
fastrand = "2.3.0"
rand = "0.9.1"
rayon = "1.10.0"
ultraviolet = "0.10.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "quadtree_benchmark"  # This should match the filename in benches/
harness = false              # Tells Cargo not to use the test harness (which hides Criterion benchmarks)
